Add steps for how to make the meal

--- a/recipes/chicken-empanadas.html
+++ b/recipes/chicken-empanadas.html
@@ -31,5 +31,18 @@
         <li>Garlic Powder</li>
         <li>Egg</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Make the chicken empanada filling. Start with peppers and onions in a warm skillet, then add garlic, cilantro, shredded cooked chicken, bouillon, tomato paste, onion powder,
+            and garlic powder. The whole lovely pan will simmer away and imbue that shredded chicken and veggie filling with fragrance and flavor.
+        </li>
+        <li>Roll out the dough!</li>
+        <li>Fill the empanadas! Take care not to over-fill—we recommend about 1/3 of a cup of filling per 6-inch dish of empanada dough.</li>
+        <li>Seal the empanadas! Egg wash, and use the tines of a fork to firmly press the edges closed.</li>
+        <li>Bake the empanadas! 375° F for 35 minutes.</li>
+        <li>EAT the empanadas! The best part! <strong>Or</strong>, you can eat a few and freeze the rest for later. They freeze beautifully.</li>
+    </ol>
+
 </body>
 </html>
