Add steps on how to make chicken burgers

--- a/recipes/chicken-burgers.html
+++ b/recipes/chicken-burgers.html
@@ -29,5 +29,26 @@
          <li>Black Pepper</li>
          <li>Mustard Powder</li>
      </ul>
+     <h3>Steps</h3>
+     <ol>
+         <li>Make the candied jalapeños! This sounds fussy but only takes about 10 minutes, and the payoff is big! Also, you can make them ahead of time to use when you’re ready!
+              They’ll keep in the fridge for three months, so one batch will last you all summer.
+        </li>
+        <li>
+            Make the smashed avocado! Literally just smash an avocado! The lemon juice is mostly just to keep the avocado from browning. Plus it tastes good.
+        </li>
+        <li>
+            Mix up those ground chicken burger patties! Just like with our beloved meatballs,
+             making burger patties benefits from a gentle touch—mix with your hands, and stop when things begin to come together.
+        </li>
+        <li>
+            Make the basil mayo! You’ve already got fresh basil and garlic for the chicken burgers, might as well use some to make a yummy mayo to top them with!
+             Use a microplane grater to grate the garlic—it’ll almost melt when you do—and it’ll mix easily into the mayo.
+        </li>
+        <li>
+            Cook the chicken burgers! No rare burgers here, please—you want that chicken thoroughly cooked through. Top them with cheese after you flip ‘em,
+             and then when the cheese is melty and the burgers are cooked through, it’ll be time to load them up and dig in!
+        </li>
+     </ol>
 </body>
 </html>
