--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/chicken-empanadas.html">Chicken Empanadas</a>
+    <ul>
+        <li> <a href="../odin-recipes/recipes/chicken-empanadas.html">Chicken Empanadas</a></li>
+        <li><a href="../odin-recipes/recipes/chicken-burgers.html">Chicken Burgers</a></li>
+        <li></li>
+    </ul>
+   
 </body>
 </html>
