Add ingriedients list for chicken kabobs

--- a/recipes/chicken-kabobs.html
+++ b/recipes/chicken-kabobs.html
@@ -20,6 +20,18 @@
          sweet, salty, rich flavors that you love so much.
          And best of all? This meal absolutely demands that you <em>mix up a pina colada (or two!)</em>.
     </p>
+
+    <h3>Ingriedients</h3>
+    <ul>
+        <li>Toasted sesame oil</li>
+        <li>Grated fresh ginger</li>
+        <li>Garlic cloves</li>
+        <li>Soy sauce or tamari</li>
+        <li>Rice vinegar</li>
+        <li>Brown sugar</li>
+        <li>Ketchup</li>
+        <li>Smoked Paprika</li>
+    </ul>
 </body>
 </html>
 
