Add steps on how to make chicken kabobs

--- a/recipes/chicken-kabobs.html
+++ b/recipes/chicken-kabobs.html
@@ -32,6 +32,30 @@
         <li>Ketchup</li>
         <li>Smoked Paprika</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Up to one day before: get the chicken marinating! Whisk together the Hawaiian chicken marinade ingredients. Save about half of the sauce for basting the chicken,
+             and use the rest to marinate the chicken breast pieces. Pop it in the fridge—at least 30 mins, but overnight is best!
+        </li>
+        <li>
+            The night before: if you’re using bamboo or wooden skewers,
+             you’ll want to soak them in water overnight before loading them with chicken, pineapple and veggies to keep them from burning on the hot grill.
+        </li>
+        <li>
+            Par-boil the sweet potatoes. You could do this up to a day ahead of time, too, if you’re a work-ahead kind of person!
+             They need a bit of cooking before they hit the grill so that they’re perfectly done right when the chicken is.
+        </li>
+        <li>
+            Prep the other veggies.
+        </li>
+        <li>
+            Assemble! Load your skewers with pieces of marinated chicken, onion pieces, bell pepper, sweet potatoes and pineapple.
+        </li>
+        <li>
+            Grill the Hawaiian chicken kabobs! Grill them for about 2-3 minutes per side. When you turn the chicken skewers, baste the uncooked side with some of the reserved marinade.
+            Your kabobs are done when the chicken pieces register 165°F on an instant-read thermometer.
+        </li>
+    </ol>
 </body>
 </html>
 
