Add heading and links for other recipes

--- a/recipes/chicken-empanadas.html
+++ b/recipes/chicken-empanadas.html
@@ -43,6 +43,10 @@
         <li>Bake the empanadas! 375° F for 35 minutes.</li>
         <li>EAT the empanadas! The best part! <strong>Or</strong>, you can eat a few and freeze the rest for later. They freeze beautifully.</li>
     </ol>
-
+    <h3>Other recipes</h3>
+    <ul>
+        <li><a href="../recipes/chicken-empanadas.html">Chicken Empanadas</a></li>
+        <li><a href="../recipes/chicken-kabobs.html">Chicken Kabobs</a></li>
+    </ul>
 </body>
 </html>
