Add link to homepage
Link add on chicken burgers, chicken empanadas, chicken kabobs

--- a/recipes/chicken-burgers.html
+++ b/recipes/chicken-burgers.html
@@ -50,5 +50,7 @@
              and then when the cheese is melty and the burgers are cooked through, it’ll be time to load them up and dig in!
         </li>
      </ol>
+     <h3>Homepage</h3>
+    <a href="../index.html">Return to homepage</a>
 </body>
 </html>
