--- a/recipes/chicken-empanadas.html
+++ b/recipes/chicken-empanadas.html
@@ -48,5 +48,7 @@
         <li><a href="../recipes/chicken-empanadas.html">Chicken Empanadas</a></li>
         <li><a href="../recipes/chicken-kabobs.html">Chicken Kabobs</a></li>
     </ul>
+    <h3>Homepage</h3>
+    <a href="../index.html">Return to homepage</a>
 </body>
 </html>
