--- a/recipes/chicken-kabobs.html
+++ b/recipes/chicken-kabobs.html
@@ -56,6 +56,8 @@
             Your kabobs are done when the chicken pieces register 165°F on an instant-read thermometer.
         </li>
     </ol>
+    <h3>Homepage</h3>
+    <a href="../index.html">Return to homepage</a>
 </body>
 </html>
 
