Fix typo in classes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>odin recipes</title>
 </head>
 <body>
-    <h1 class="Center">Odin Recipes</h1>
-    <ul class="Center ">
+    <h1 class="center">Odin Recipes</h1>
+    <ul class="center ">
         <li> <a href="../odin-recipes/recipes/chicken-empanadas.html"><em>Chicken Empanadas</em></a></li>
         <li><a href="../odin-recipes/recipes/chicken-burgers.html"><em>Chicken Burgers</em></a></li>
         <li><a href="../odin-recipes/recipes/chicken-kabobs.html"><em>Chicken Kabobs</em></a></li>
