--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>odin recipes</title>
 </head>
 <body>
-    <h1 class="center">Odin Recipes</h1>
-    <ul class="center ">
-        <li> <a href="../odin-recipes/recipes/chicken-empanadas.html"><em>Chicken Empanadas</em></a></li>
+    <h1 class="center purple background">Odin Recipes</h1>
+    <ul class="center medium-big background">
+        <li><a href="../odin-recipes/recipes/chicken-empanadas.html"><em>Chicken Empanadas</em></a></li>
         <li><a href="../odin-recipes/recipes/chicken-burgers.html"><em>Chicken Burgers</em></a></li>
         <li><a href="../odin-recipes/recipes/chicken-kabobs.html"><em>Chicken Kabobs</em></a></li>
     </ul>
