Add classes in chicken-empanadas

--- a/recipes/chicken-empanadas.html
+++ b/recipes/chicken-empanadas.html
@@ -8,19 +8,19 @@
     <title>Chicken Empanadas</title>
 </head>
 <body>
-    <h1>Chicken Empanadas</h1>
-    <img src="../images/chicken-empanadas.jpg" alt="Chicken Empanadas">
+    <h1 class="center">Chicken Empanadas</h1>
+    <img class="img" src="../images/chicken-empanadas.jpg" alt="Chicken Empanadas">
 
-    <h3>Description</h3>
-    <p>Loaded with shredded chicken, onions, peppers and garlic, these chicken empanadas are <em>fast favorites</em>.
+    <h3 class="center">Description</h3>
+    <p class="center">Loaded with shredded chicken, onions, peppers and garlic, these chicken empanadas are <em>fast favorites</em>.
     Flavored with onion powder, tomato paste and garlic powder, they’re the opposite of fancy and the epitome of <strong>savory goodness</strong>.
     </p>
-    <p>A hearty, meaty, Argetinian-inspired chicken-and-veggie filling tucked into a buttery baked crust—chicken empanadas are a hand-held party food
+    <p class="center">A hearty, meaty, Argetinian-inspired chicken-and-veggie filling tucked into a buttery baked crust—chicken empanadas are a hand-held party food
        / dinner food / anytime food that the whole family will <strong><em>love</em></strong>.
     </p>
 
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="center">Ingredients</h3>
+    <ul class="center">
         <li>Shredded Chicken Breast</li>
         <li>Onion</li>
         <li>Bell Peppers</li>
@@ -33,8 +33,8 @@
         <li>Egg</li>
     </ul>
 
-    <h3>Steps</h3>
-    <ol>
+    <h3 class="center">Steps</h3>
+    <ol class="center">
         <li>Make the chicken empanada filling. Start with peppers and onions in a warm skillet, then add garlic, cilantro, shredded cooked chicken, bouillon, tomato paste, onion powder,
             and garlic powder. The whole lovely pan will simmer away and imbue that shredded chicken and veggie filling with fragrance and flavor.
         </li>
@@ -44,12 +44,12 @@
         <li>Bake the empanadas! 375° F for 35 minutes.</li>
         <li>EAT the empanadas! The best part! <strong>Or</strong>, you can eat a few and freeze the rest for later. They freeze beautifully.</li>
     </ol>
-    <h3>Other recipes</h3>
-    <ul>
+    <h3 class="center">Other recipes</h3>
+    <ul class="center">
         <li><a href="../recipes/chicken-empanadas.html">Chicken Empanadas</a></li>
         <li><a href="../recipes/chicken-kabobs.html">Chicken Kabobs</a></li>
     </ul>
-    <h3>Homepage</h3>
-    <a href="../index.html">Return to homepage</a>
+    <h3 class="center">Homepage</h3>
+    <a class="center" href="../index.html">Return to homepage</a>
 </body>
 </html>
