Add class to return to homepage

--- a/recipes/chicken-empanadas.html
+++ b/recipes/chicken-empanadas.html
@@ -50,6 +50,6 @@
         <li><a href="../recipes/chicken-kabobs.html">Chicken Kabobs</a></li>
     </ul>
     <h3 class="center">Homepage</h3>
-    <a class="center" href="../index.html">Return to homepage</a>
+    <a href="../index.html"><p class="center">Return to homepage</p></a>
 </body>
 </html>
