Add class to h1 in chicken-empanadas

--- a/recipes/chicken-empanadas.html
+++ b/recipes/chicken-empanadas.html
@@ -8,7 +8,7 @@
     <title>Chicken Empanadas</title>
 </head>
 <body>
-    <h1 class="center">Chicken Empanadas</h1>
+    <h1 class="center background">Chicken Empanadas</h1>
     <img class="img" src="../images/chicken-empanadas.jpg" alt="Chicken Empanadas">
 
     <h3 class="center">Description</h3>
