Add classes to chicken-burgers.html

--- a/recipes/chicken-burgers.html
+++ b/recipes/chicken-burgers.html
@@ -8,19 +8,19 @@
     <title>Chicken Burge</title>
 </head>
 <body>
-    <h1>Chicken Burgers</h1>
+    <h1 class="center">Chicken Burgers</h1>
     <img src="../images/chicken-burger.jpg"alt="Chicken Burger">
 
-    <h3>Description</h3>
-    <p>Burger night can be as indulgent as you want—we’re all for indulgence!—but sometimes you want to satisfy your burger craving and still feel like you ate and served up a healthy meal, too.
+    <h3 class="center">Description</h3>
+    <p class="center">Burger night can be as indulgent as you want—we’re all for indulgence!—but sometimes you want to satisfy your burger craving and still feel like you ate and served up a healthy meal, too.
          We’ve leaned into our spicier side for this chicken burger recipe, topping them with homemade candied jalapeños—easier to make than you’d think—and spicy Pepper Jack cheese.
           They’re healthy and unbelievably satisfying.
-    </p><p>Yes, you’ll still be needing a million napkins on hand when you’re eating these, which is how we know we’ve made a great burger recipe.
+    </p><p class="center">Yes, you’ll still be needing a million napkins on hand when you’re eating these, which is how we know we’ve made a great burger recipe.
           This is not the mystery-bird chicken sandwich you remember from the school cafeteria—and thank goodness for that.
      </p>
 
-     <h3>Ingriedients</h3>
-     <ul>
+     <h3 class="center">Ingriedients</h3>
+     <ul class="center">
          <li>Breadcrumbs</li>
          <li>Basil</li>
          <li>Garlic</li>
@@ -30,8 +30,8 @@
          <li>Black Pepper</li>
          <li>Mustard Powder</li>
      </ul>
-     <h3>Steps</h3>
-     <ol>
+     <h3 class="center">Steps</h3>
+     <ol class="center">
          <li>Make the candied jalapeños! This sounds fussy but only takes about 10 minutes, and the payoff is big! Also, you can make them ahead of time to use when you’re ready!
               They’ll keep in the fridge for three months, so one batch will last you all summer.
         </li>
@@ -51,7 +51,7 @@
              and then when the cheese is melty and the burgers are cooked through, it’ll be time to load them up and dig in!
         </li>
      </ol>
-     <h3>Homepage</h3>
-    <a href="../index.html">Return to homepage</a>
+     <h3 class="center">Homepage</h3>
+     <a href="../index.html"><p class="center">Return to homepage</p></a>
 </body>
 </html>
