--- a/recipes/chicken-kabobs.html
+++ b/recipes/chicken-kabobs.html
@@ -8,22 +8,22 @@
     <title>Chicken Kabobs</title>
 </head>
 <body>
-    <h1>Chicken Kabobs</h1>
+    <h1 class="center">Chicken Kabobs</h1>
     <img src="../images/chicken-kabobs.jpg" alt="Hawaiian Chicken Kabobs">
 
-    <h3>Description</h3>
-    <p>Sweet and juicy, tart and sunny, pineapple is brilliant fresh, but did you know that it’s delicious when thrown on a grill?
+    <h3 class="center">Description</h3>
+    <p class="center">Sweet and juicy, tart and sunny, pineapple is brilliant fresh, but did you know that it’s delicious when thrown on a grill?
         <strong>Grilled pineapple</strong> gets a lovely caramelization and its sweet-tartness intensifies into something totally otherworldly.
          Paired with juicy marinated chicken and skewered onto colorful, veggie-laden kabobs.
     </p>
-    <p>
+    <p class="center">
         A trip to Hawaii may not be in the cards this summer, but these Hawaiian chicken kabobs will get you really close—at least they’ll fill your senses with all of those beautiful
          sweet, salty, rich flavors that you love so much.
          And best of all? This meal absolutely demands that you <em>mix up a pina colada (or two!)</em>.
     </p>
 
-    <h3>Ingriedients</h3>
-    <ul>
+    <h3 class="center">Ingriedients</h3>
+    <ul class="center">
         <li>Toasted sesame oil</li>
         <li>Grated fresh ginger</li>
         <li>Garlic cloves</li>
@@ -33,8 +33,8 @@
         <li>Ketchup</li>
         <li>Smoked Paprika</li>
     </ul>
-    <h3>Steps</h3>
-    <ol>
+    <h3 class="center">Steps</h3>
+    <ol class="center">
         <li>Up to one day before: get the chicken marinating! Whisk together the Hawaiian chicken marinade ingredients. Save about half of the sauce for basting the chicken,
              and use the rest to marinate the chicken breast pieces. Pop it in the fridge—at least 30 mins, but overnight is best!
         </li>
@@ -57,8 +57,8 @@
             Your kabobs are done when the chicken pieces register 165°F on an instant-read thermometer.
         </li>
     </ol>
-    <h3>Homepage</h3>
-    <a href="../index.html">Return to homepage</a>
+    <h3 class="center">Homepage</h3>
+    <a href="../index.html"><p class="center">Return to homepage</p></a>
 </body>
 </html>
 
